# ArcadeBT

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  bench.cpp  bt.h  c_demo.c  print.cpp
c/: c_demo2.c  example0.c  example1.c  example10.c  example11.c  example12.c  example13.c  example14.c  example15.c  example16.c  example17.c  example18.c  example19.c  example2.c  example20.c  example21.c  example22.c  example23.c  example24.c  example25.c  example26.c  example27.c  example28.c  example29.c  example3.c  example30.c  example31.c  example32.c  example33.c  example34.c  example35.c  example36.c  example37.c  example38.c  example39.c  example4.c  example40.c  example41.c  example5.c  example6.c  (+3 more)
src/: CMakeLists.txt  c_output.cpp  c_output.h  linear_encoding.cpp  linear_encoding.h  seahorn_export.cpp  seahorn_export.h
src/analysis/: clause.cpp  clause.h  predicate.cpp  predicate.h  variable.cpp  variable.h
src/analysis/linear/: encoding.cpp  encoding.h  variable_factory.cpp  variable_factory.h
src/examples/: example00.cpp  example01.cpp  example01.h  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp  example16.cpp  example17.cpp  example18.cpp  example19.cpp  example20.cpp  example21.cpp  example22.cpp  example23.cpp  example24.cpp  example25.cpp  example26.cpp  example27.cpp  example28.cpp  example29.cpp  example30.cpp  example31.cpp  example32.cpp  example33.cpp  example34.cpp  example35.cpp  example36.cpp  example37.cpp  example38.cpp  (+4 more)
src/ir/: bt.cpp  bt.h  cfa.cpp  cfa.h  expression.cpp  expression.h  statement.cpp  statement.h  variable.cpp  variable.h  visitor.h
test/: CMakeLists.txt  examples_test.cpp
test/ir/: expression_test.cpp
